# altera_example

./: .gitmodules  DOCKER_101.md  README.md  eda_license_install.md
agilex5/a5e013/: a5_013_devkit.md  a5_baremetal.md
agilex5/a5e013/baremetal-example/: CMakeLists.txt  arm-none-eabi-gcc.cmake  hello_world.c
agilex5/a5e065_prem/: README.md  a5_065_prem_devkit.md
questa_docker/: Dockerfile  Dockerfile_leap15  Dockerfile_rocky9  README.md  build_image.sh  build_image_leap.sh  build_image_rocky.sh  run_new_container.sh  run_new_container_rocky.sh
vds_pd_axi/: README.md
vds_pd_axi/pd_example/: pd_test.qsys  top.qpf  top.qsf  top.v
vds_pd_axi/pd_example/ip/pd_test/: axi4_mgr.ip  axi4_mgr_narrow.ip  axi4_sub_wide.ip  clk_src1.ip  clk_src2.ip  rst_src.ip
vds_pd_axi/pd_example/ip/pd_test/axi4_mgr/: axi4_mgr.cmp  axi4_mgr.csv  axi4_mgr.html  axi4_mgr.qgsimc  axi4_mgr.sopcinfo  axi4_mgr.spd  axi4_mgr_bb.v  axi4_mgr_generation.rpt  axi4_mgr_inst.v  axi4_mgr_inst.vhd
vds_pd_axi/pd_example/ip/pd_test/axi4_mgr_narrow/: axi4_mgr_narrow.cmp  axi4_mgr_narrow.csv  axi4_mgr_narrow.html  axi4_mgr_narrow.qgsimc  axi4_mgr_narrow.sopcinfo  axi4_mgr_narrow.spd  axi4_mgr_narrow_bb.v  axi4_mgr_narrow_generation_previous.rpt  axi4_mgr_narrow_inst.v  axi4_mgr_narrow_inst.vhd
vds_pd_axi/pd_example/pd_test/: pd_test.bsf  pd_test.cmp  pd_test.csv  pd_test.html  pd_test.qgsimc  pd_test.qip  pd_test.sopcinfo  pd_test.spd  pd_test.xml  pd_test_bb.v  pd_test_generation_previous.rpt  pd_test_inst.v  pd_test_inst.vhd
vds_pd_axi/pd_example/pd_test/sim/: pd_test.v  pd_test_stim.sv
vds_pd_axi/pd_example/pd_test/synth/: pd_test.v
(+109 files in other folders)
